--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=boleto
-spring.datasource.url=jdbc:mariadb:http://localhost:3306
+spring.datasource.url=jdbc:mysql://localhost:3306/boletos
 spring.datasource.username=root
 spring.datasource.password=
-spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
